# Shadow-API-Platform

./: .env.example  .gitignore  QUICKSTART.md  README.md  dashboard.html  examples.sh  experiment_logs.txt  intercept.html  manage.sh  proxy.pid  pyproject.toml  requirements.txt  start.sh  网络访问说明.md  调用说明.md
.claude/: settings.local.json
app/: __init__.py  config.py  main.py
app/adapters/: __init__.py  anthropic_adapter.py  base.py  openai_adapter.py
app/rules/: __init__.py  actions.py  engine.py  loader.py  matchers.py
app/schemas/: __init__.py  intercept.py  models.py  rules.py  traces.py
app/services/: __init__.py  intercept.py  proxy.py  replay.py  trace_store.py
app/utils/: __init__.py  ids.py  logging.py
experiment_records/: README.md
experiment_records/analysis/: incident_analysis.md
experiment_records/intercept_logs/: intercept.py
experiment_records/traces/: index.jsonl  tr_20260315100417_45630228.json  tr_20260315100528_fbf91617.json  tr_20260315100859_e659bbb6.json  tr_20260315101002_55a57544.json  tr_20260315102142_d06ab60c.json  tr_20260315102202_db9212f8.json  tr_20260315103101_4474f8f1.json  tr_20260315103124_a76a8a79.json  tr_20260315103154_0a4c3cfa.json  tr_20260315103218_168449a2.json  tr_20260315103251_0327674f.json  tr_20260315103302_79852cad.json
logs/: .gitkeep
tests/: __init__.py  test_config.py  test_proxy.py  test_rules.py
